force-app/main/default/objects/PriceListLine__c/PriceListLine__c.object-meta.xml
<CustomObject>
    <label>Price List Line</label>
    <nameField>
        <displayFormat>PLL-{0000000}</displayFormat>
        <label>Price List Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price List Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>