force-app/main/default/objects/PriceListLine__c/fields/PriceList__c.field-meta.xml
<CustomField>
    <fullName>PriceList__c</fullName>
    <label>Price List</label>
    <referenceTo>PriceList__c</referenceTo>
    <relationshipLabel>Price List Lines</relationshipLabel>
    <relationshipName>PriceListLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>