force-app/main/default/objects/PriceListLine__c/fields/PriceListCountry__c.field-meta.xml
<CustomField>
    <fullName>PriceListCountry__c</fullName>
    <formula>TEXT(PriceList__r.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price List Country</label>
    <type>Text</type>
</CustomField>