force-app/main/default/objects/PriceListLine__c/fields/PriceListCustomer__c.field-meta.xml
<CustomField>
    <fullName>PriceListCustomer__c</fullName>
    <formula>CASESAFEID(PriceList__r.Customer__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price List Customer</label>
    <type>Text</type>
</CustomField>