force-app/main/default/objects/PriceListLine__c/fields/PriceTierCount__c.field-meta.xml
<CustomField>
    <fullName>PriceTierCount__c</fullName>
    <label>Tier Count</label>
    <summaryForeignKey>PriceListLineTier__c.PriceListLine__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>