force-app/main/default/objects/PriceListLine__c/fields/PriceType__c.field-meta.xml
<CustomField>
    <fullName>PriceType__c</fullName>
    <formula>IF(
  PriceTierCount__c &gt; 0, &quot;TIERED&quot;,
  &quot;STANDARD&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Type</label>
    <type>Text</type>
</CustomField>