force-app/main/default/objects/PriceListLine__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Price List Lines</relationshipLabel>
    <relationshipName>PriceListLines</relationshipName>
    <type>Lookup</type>
</CustomField>