force-app/main/default/objects/PriceListLine__c/validationRules/Single_Price_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Single_Price_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(PriceTierCount__c &gt; 0, NOT(ISNULL(Price__c)))</errorConditionFormula>
    <errorMessage>A Price List Line cannot have both Price Tiers and a Price value defined.</errorMessage>
</ValidationRule>